[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/inventories/ItemListSlotDisplay.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/superstar_memesbruh03.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/items/melon/color.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="ItemListSlotDisplay" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GridDisplay" type="GridContainer" parent="."]
margin_left = 312.0
margin_top = 252.0
margin_right = 712.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="ItemLabel" type="Label" parent="GridDisplay"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 300.0
margin_bottom = 72.0
rect_min_size = Vector2( 300, 48 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Test"
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="GridDisplay"]
margin_left = 304.0
margin_right = 400.0
margin_bottom = 96.0

[node name="ColorTextureRect" type="TextureRect" parent="GridDisplay/CenterContainer"]
unique_name_in_owner = true
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
texture = ExtResource( 3 )
stretch_mode = 4

[node name="PersistTextureRect" type="TextureRect" parent="GridDisplay/CenterContainer"]
unique_name_in_owner = true
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
stretch_mode = 4

[node name="LineTextureRect" type="TextureRect" parent="GridDisplay/CenterContainer"]
unique_name_in_owner = true
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
stretch_mode = 4
